bk_ida/gobmkida/c3/semeai_move_value
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/semeai_move_value/src/engine/owl.c:1429:4: error: use of undeclared identifier 'byte_9C689F'
|| byte_9C689F[move] != 3 && owla->goal[move - 1] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/semeai_move_value/src/engine/owl.c:1430:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[move] != 3 && owla->goal[move - 20] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/semeai_move_value/src/obj/1/owl.o] Error 1
